Complete dependency refresh; Gradle -> 5.6